// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarPopup Component Renderització bàsica snapshot test - amb avatar 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.9)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 8,
          "position": "absolute",
          "right": 20,
          "top": 50,
          "zIndex": 10,
        }
      }
    >
      <TrashIcon
        color="#fff"
        height={32}
        width={32}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 40,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FF6900",
            "borderRadius": 150,
            "height": 300,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 300,
          }
        }
      >
        <Image
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "gap": 12,
          "maxWidth": 300,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2b2b2bff",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "center",
            "minHeight": 50,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 14,
          }
        }
      >
        <Image
          source="TrashIcon"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          profile.avatar.changePhoto
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2b2b2bff",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "center",
            "minHeight": 50,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 14,
          }
        }
      >
        <TrashIcon
          color="#ffffffff"
          height={20}
          width={20}
        />
        <Text
          style={
            [
              {
                "color": "#fff",
                "fontFamily": "Arimo",
                "fontSize": 16,
                "fontWeight": "600",
              },
              {
                "color": "#ff0000",
              },
            ]
          }
        >
          profile.avatar.deletePhoto
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AvatarPopup Component Renderització bàsica snapshot test - sense avatar 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.9)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 8,
          "position": "absolute",
          "right": 20,
          "top": 50,
          "zIndex": 10,
        }
      }
    >
      <TrashIcon
        color="#fff"
        height={32}
        width={32}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 40,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FF6900",
            "borderRadius": 150,
            "height": 300,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 300,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FF6900",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 60,
                "fontWeight": "bold",
              }
            }
          >
            ?
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 12,
          "maxWidth": 300,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2b2b2bff",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "center",
            "minHeight": 50,
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 14,
          }
        }
      >
        <Image
          source="TrashIcon"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
        <Text
          style={
            {
              "color": "#fff",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          profile.avatar.changePhoto
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
